--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="pl-Pl">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://archeologpwl.pages.dev">
-  <title>Przekierowanie do nowej witryny</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript">
+    window.location.href = "https://archeologpwl.pages.dev";
+  </script>
+  <title>Strona została przeniesiona</title>
 </head>
 <body>
   <h1>Jeśli nie zostałeś poprawnie przekierowany, <a href="https://archeologpwl.pages.dev">kliknij tutaj, aby przejść na nową stronę</a>.</h1>
